--- a/finish/src/main/res/values/strings.xml
+++ b/finish/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">Bird Tracker</string>
+    <string name="app_name">Canopy</string>
     <string name="permission_deny_text">Required permissions denied. Exiting.</string>
     <string name="tensorflow_lite_logo_description">TensorFlow Lite logo</string>
 </resources>
